--- a/TopDown2DShooter/Saved/Config/WindowsEditor/Engine.ini
+++ b/TopDown2DShooter/Saved/Config/WindowsEditor/Engine.ini
@@ -72,3 +72,11 @@ TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbn
 [GameNetDriver StatelessConnectHandlerComponent]
 CachedClientID=2
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
