--- a/TopDown2DShooter/Saved/Config/WindowsEditor/Engine.ini
+++ b/TopDown2DShooter/Saved/Config/WindowsEditor/Engine.ini
@@ -43,6 +43,7 @@ Paths=../../../Engine/Plugins/FX/Niagara/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/LightMixer/Content
 Paths=../../../Engine/Plugins/Editor/ObjectMixer/ObjectMixer/Content
 Paths=../../../Engine/Plugins/Bridge/Content
+Paths=../../../Engine/Plugins/Runtime/HairStrands/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -70,7 +71,7 @@ TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbn
 TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbnails/Basic.Basic",Map="/Engine/Maps/Templates/Template_Default",DisplayName="Basic",Category="")
 
 [GameNetDriver StatelessConnectHandlerComponent]
-CachedClientID=2
+CachedClientID=14
 
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
