--- a/TopDown2DShooter/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TopDown2DShooter/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -178,12 +178,12 @@ StaticMeshActor=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialLi
 CapsuleComponent=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 MaterialInstanceConstant=
 PlayerStart=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
-LevelInstanceComponent=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+LevelInstanceComponent=
 BPP_GroundMossLarge_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 SceneComponent=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 BPP_WoodenHouse_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList
 Actor=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision
-BPP_WoodenHouseTunnel_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision
+BPP_WoodenHouseTunnel_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 BPP_GroundMossSmall_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings.NewActionMapping_0,InputSettings.Platforms.InputPlatformSettings_Windows,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources
@@ -326,6 +326,8 @@ TargetPoint=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,C
 NewHUD_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 UI_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 WidgetBlueprint=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+EdGraphNode_Comment=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
+PauseMenu_C=PostProcessVolume.Lens.Lens,StaticMeshActor.Materials.MaterialList,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.Tags,BP_ThirdPersonCharacter_C.TransformCommon.Transform
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game
@@ -429,7 +431,7 @@ LastLevel=/Game/Maps/Level_01
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 Actor="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -684,10 +686,10 @@ FloatingPawnMovement="\"Object\" "
 K2Node_InputKey="\"Object\" "
 MutiplayerGameMode_C=
 GameModeBase=
-TextBlock="\"Object\" \"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Widget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 UI_C="\"Object\" "
@@ -699,6 +701,7 @@ BaseWidgetBlueprint="\"Object\" "
 UserWidgetBlueprint="\"Object\" "
 Button="\"Object\" \"Object.Appearance.ColorAndOpacity\" "
 InGameHUD_C="\"Object\" "
+PauseMenu_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -3534,26 +3537,26 @@ RecentsFiles=D:/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_u
 RecentsFiles=D:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_Laser
-MRUItem1=/Game/HUD/PauseMenu
-MRUItem2=/Game/HUD/InGameHUD
-MRUItem3=/Game/HUD/UI
-MRUItem4=/Game/ThirdPerson/Input/IMC_Default
-MRUItem5=/Game/ThirdPerson/Blueprints/Vylepsenia
-MRUItem6=/Game/ThirdPerson/Blueprints/MutiplayerGameMode
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem9=/Game/HUD/NewHUD
-MRUItem10=/Game/Maps/Level_01
-MRUItem11=/Game/UI
-MRUItem12=/Game/HUD/NewWidgetBlueprint
-MRUItem13=/Game/Blueprints/NewHUD
-MRUItem14=/Game/ThirdPerson/Blueprints/Upgrade
-MRUItem15=/Game/ThirdPerson/Blueprints/Char
-MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Fire
-MRUItem17=/Game/ThirdPerson/Blueprints/hovno
-MRUItem18=/Game/AI_Enemy
-MRUItem19=/Game/ThirdPerson/Blueprints/NewMaterial
+MRUItem0=/Game/LevelMass/BPP_WoodenHouseTunnel
+MRUItem1=/Game/BP_Laser
+MRUItem2=/Game/HUD/PauseMenu
+MRUItem3=/Game/HUD/InGameHUD
+MRUItem4=/Game/HUD/UI
+MRUItem5=/Game/ThirdPerson/Input/IMC_Default
+MRUItem6=/Game/ThirdPerson/Blueprints/Vylepsenia
+MRUItem7=/Game/ThirdPerson/Blueprints/MutiplayerGameMode
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Game/HUD/NewHUD
+MRUItem11=/Game/Maps/Level_01
+MRUItem12=/Game/UI
+MRUItem13=/Game/HUD/NewWidgetBlueprint
+MRUItem14=/Game/Blueprints/NewHUD
+MRUItem15=/Game/ThirdPerson/Blueprints/Upgrade
+MRUItem16=/Game/ThirdPerson/Blueprints/Char
+MRUItem17=/Game/ThirdPerson/Input/Actions/IA_Fire
+MRUItem18=/Game/ThirdPerson/Blueprints/hovno
+MRUItem19=/Game/AI_Enemy
 
 [AssetEditorToolkitTabLocation]
 /Game/Megascans/3D_Assets/Granite_Rock_Assembly_reFto/S_Granite_Rock_Assembly_reFto_lod3.S_Granite_Rock_Assembly_reFto_lod3=1
@@ -3603,7 +3606,7 @@ MRUItem19=/Game/ThirdPerson/Blueprints/NewMaterial
 /Game/ThirdPerson/Input/Actions/IA_Move.IA_Move=1
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=0
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
-/Game/LevelMass/BPP_WoodenHouseTunnel.BPP_WoodenHouseTunnel=1
+/Game/LevelMass/BPP_WoodenHouseTunnel.BPP_WoodenHouseTunnel=0
 /Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump=1
 /Game/ThirdPerson/Blueprints/Character2.Character2=0
 /Game/ThirdPerson/Input/IMC_Default2.IMC_Default2=0
